--- a/phase-2-web/frontend/package.json
+++ b/phase-2-web/frontend/package.json
@@ -11,32 +11,33 @@
     "test:e2e": "cypress run"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "16.1.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4",
-    "lucide-react": "^0.456.0",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.456.0",
+    "next": "16.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
-    "zod": "^3.23.8",
-    "@hookform/resolvers": "^3.9.1"
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/react": "^18.0.0",
-    "@types/node": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "jest": "^29.0.0",
-    "@testing-library/react": "^13.0.0",
     "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^13.0.0",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.24",
     "cypress": "^13.0.0",
+    "jest": "^29.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "ts-jest": "^29.2.5",
-    "@types/jest": "^29.5.13"
+    "typescript": "^5.0.0"
   }
 }
